[tool.poetry]
name = "space-app"
version = "0.1.0"
description = "Space project for children"
authors = ["u-shev <sheveleva.jul@gmail.com>"]
readme = "README.md"
packages = [{include = "space_app"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
django = "^4.2.7"
python-dotenv = "^1.0.0"
django-bootstrap5 = "^23.3"
aiohttp = "^3.9.1"
uvicorn = "^0.24.0.post1"
requests = "^2.31.0"
celery = "^5.3.6"
redis = "^5.0.1"
flake8 = "^6.1.0"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
